WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
94938
[BlackBerry] Touch cancel can cause huge and needless invalidations
https://bugs.webkit.org/show_bug.cgi?id=94938
Summary
[BlackBerry] Touch cancel can cause huge and needless invalidations
Antonio Gomes
Reported
2012-08-24 08:11:04 PDT
PR #198051 In order to remove the possible hover effect on touch_cancel, we always invalidate the node under the fat finger, being the fat finger valid or not. Point is having a valid fat finger node does not mean the original touch position was actually adjust for clicking or that the fat finger is actually valid. We set the fat finger node to be the result of the point-based hit-test regardless if it is a click target or not (in order to make our mouse-move machinery to work). We should can less aggressively invalidate the fat finger node, since it can be rather an expensive call (longer than 1s in the worst scenario).
Attachments
patch
(4.60 KB, patch)
2012-08-24 08:34 PDT
,
Antonio Gomes
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Antonio Gomes
Comment 1
2012-08-24 08:34:18 PDT
Created
attachment 160425
[details]
patch
https://trac.webkit.org/changeset/126588
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug